# TinySteno

./: .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  TODO.md  pyproject.toml
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/workflows/: pylint.yml
docs/specs/: 2026-03-18-personas-design.md
docs/superpowers/plans/: 2026-03-18-personas.md  2026-03-19-pylint-fixes.md  2026-03-20-persona-consolidation.md
docs/superpowers/specs/: 2026-03-18-personas-design.md  2026-03-20-persona-consolidation-design.md
tests/: conftest.py  test_main.py  test_obsidian.py  test_orchestrator.py  test_personas.py  test_recorder.py  test_summarizer.py  test_transcriber.py
tinysteno/: __init__.py  _macos_loopback.py  main.py  obsidian.py  orchestrator.py  recorder.py  summarizer.py  transcriber.py
tinysteno/personas/: __init__.py
tinysteno/personas/1on1/: persona.yaml  system_prompt.md  template.md
tinysteno/personas/default/: persona.yaml  system_prompt.md  template.md
tinysteno/personas/executive-summary/: persona.yaml  system_prompt.md  template.md
tinysteno/personas/irm/: persona.yaml  system_prompt.md  template.md
tinysteno/personas/kickoff/: persona.yaml  system_prompt.md  template.md
tinysteno/personas/rca/: persona.yaml  system_prompt.md  template.md
tinysteno/personas/sprint/: persona.yaml  system_prompt.md  template.md
