[project]
name = "tinysteno"
version = "0.1.0"
description = "Minimal meeting recorder with Obsidian export"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pywhispercpp>=1.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "soundfile>=0.12.0",
    "faster-whisper>=1.0.0",
    "pyobjc-framework-ScreenCaptureKit>=10.0; sys_platform == 'darwin'",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tinysteno*"]

[project.scripts]
tinysteno = "tinysteno.main:main"

[tool.uv]
package = true
