[project]
name = "tinysteno"
version = "0.1.0"
description = "Minimal meeting recorder with Obsidian export"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pywhispercpp>=1.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "soundfile>=0.12.0",
    "faster-whisper>=1.0.0",
    "pyobjc-framework-ScreenCaptureKit>=10.0; sys_platform == 'darwin'",
    "jinja2>=3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pylint==4.0.5",
]

[tool.setuptools.packages.find]
include = ["tinysteno*"]

[tool.setuptools.package-data]
"tinysteno.personas" = ["*/persona.yaml", "*/system_prompt.md", "*/template.md"]

[project.scripts]
tinysteno = "tinysteno.main:main"

[tool.uv]
package = true
