[project]
name = "tinysteno"
version = "0.1.7"
description = "Minimal meeting recorder with Obsidian export"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.5.5",
    "numpy>=2.4.3",
    "pywhispercpp>=1.4.1",
    "openai>=2.29.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "soundfile>=0.13.1",
    "faster-whisper>=1.2.1",
    "pyobjc-framework-ScreenCaptureKit>=12.1; sys_platform == 'darwin'",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pylint==4.0.5",
]

[tool.setuptools.packages.find]
include = ["tinysteno*"]

[tool.setuptools.package-data]
"tinysteno.personas" = ["*/persona.yaml", "*/system_prompt.md", "*/template.md"]

[project.scripts]
tinysteno = "tinysteno.main:main"

[tool.uv]
package = true
